Added routes and menu

--- a/app/views/info/about.html.erb
+++ b/app/views/info/about.html.erb
@@ -1,1 +1,3 @@
 <h2>About Us</h2>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dictum ligula eget lacus aliquet tempor. Praesent velit nisl, feugiat eu consequat eget, euismod eget ligula. Etiam quis nibh vitae libero egestas vulputate. Aenean semper sem eget dolor congue ultrices. Phasellus tincidunt accumsan lacus vel cursus. Proin iaculis vestibulum scelerisque. Integer blandit orci et iaculis fringilla. Duis nec lectus sit amet libero auctor varius quis eu augue. Vestibulum volutpat scelerisque faucibus. Donec eget eleifend est, sit amet pulvinar ante. Morbi tincidunt, arcu sed ultricies aliquam, nunc est sodales lacus, non viverra orci leo vitae ligula.</p>
