--- a/app/views/info/contact.html.erb
+++ b/app/views/info/contact.html.erb
@@ -1,1 +1,3 @@
 <h2>Contact us</h2>
+
+<p>Praesent porta metus at dui vehicula, sed ultrices ante laoreet. In sagittis diam in semper malesuada. Nam sed porta erat. Donec et posuere massa. Ut nec dignissim lectus. Aliquam tempor, est sed vulputate venenatis, mauris dolor ultrices orci, eget hendrerit magna quam et lorem. Nulla quis odio malesuada, convallis tortor tempor, tincidunt lorem.</p>
