--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -1,1 +1,3 @@
 <h2>Homepage</h2>
+
+<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque eget accumsan felis, a fringilla erat. Maecenas et arcu in ipsum porta condimentum sit amet et massa. Praesent et accumsan massa. Praesent eleifend elementum risus, sed consectetur eros luctus vel. Donec sagittis nulla eu mauris tincidunt ullamcorper. Donec sed consectetur neque. Donec et sem hendrerit, volutpat urna in, dapibus est. Curabitur aliquet nulla vitae felis tincidunt, sit amet euismod est commodo. Morbi sodales quam vitae rutrum mattis. Donec egestas interdum lectus, id condimentum neque.</p>
