--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 		<li><%= link_to 'Home', root_path %></li>
 		<li><%= link_to 'About', about_path %></li>
 		<li><%= link_to 'Contact', contact_path %></li>
+		<li><%= link_to 'Blog', posts_path %></li>
 	</ul>
 </div>
 
