Added listing blog posts, posts are added through the posts index

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,13 @@
 <h2>Company Blog</h2>
 
+<ul>
+	<% @all_posts.each do | post | %>
+	<h3><%= post.title %></h3>
+	<ul>
+		<li>Created ad: <%= post.created_at %></li>
+		<li>Updated ad: <%= post.updated_at %></li>
+	</ul>
+	<p><%= post.content %></p>
+	<hr />
+	<% end %>
+</ul>
