Getting caught up

--- a/app/views/info/about.html.erb
+++ b/app/views/info/about.html.erb
@@ -1,3 +1,7 @@
 <h2>About Us</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dictum ligula eget lacus aliquet tempor. Praesent velit nisl, feugiat eu consequat eget, euismod eget ligula. Etiam quis nibh vitae libero egestas vulputate. Aenean semper sem eget dolor congue ultrices. Phasellus tincidunt accumsan lacus vel cursus. Proin iaculis vestibulum scelerisque. Integer blandit orci et iaculis fringilla. Duis nec lectus sit amet libero auctor varius quis eu augue. Vestibulum volutpat scelerisque faucibus. Donec eget eleifend est, sit amet pulvinar ante. Morbi tincidunt, arcu sed ultricies aliquam, nunc est sodales lacus, non viverra orci leo vitae ligula.</p>
+<p>Banana banana</p>
+
+<p>
+  Integer eu hendrerit dolor. Nulla at urna in quam eleifend scelerisque quis id magna. Donec id lacinia est. Sed et auctor erat. Proin volutpat pharetra erat porta convallis. Vivamus ac nulla eget nunc congue faucibus. Nunc lobortis molestie bibendum. Phasellus nec viverra massa. Quisque sit amet massa facilisis, imperdiet tellus et, imperdiet ante. Nullam et nibh sit amet neque rhoncus porta. In vel accumsan risus, et vulputate diam. Etiam libero urna, tristique vel placerat ultrices, mattis sed velit. Cras ultrices ultrices urna sit amet semper. Aenean et mattis dui. In sed orci ac leo tincidunt luctus.
+</p>
