--- a/app/views/info/contact.html.erb
+++ b/app/views/info/contact.html.erb
@@ -1,3 +1,5 @@
-<h2>Contact us</h2>
+<h2>Contact Us</h2>
 
-<p>Praesent porta metus at dui vehicula, sed ultrices ante laoreet. In sagittis diam in semper malesuada. Nam sed porta erat. Donec et posuere massa. Ut nec dignissim lectus. Aliquam tempor, est sed vulputate venenatis, mauris dolor ultrices orci, eget hendrerit magna quam et lorem. Nulla quis odio malesuada, convallis tortor tempor, tincidunt lorem.</p>
+<p>
+  Suspendisse dignissim consequat turpis, sit amet sagittis erat pulvinar vel. Etiam pellentesque, eros ac dapibus ultrices, nunc diam pharetra odio, eget pretium nunc justo faucibus velit. In congue velit in nisi egestas pharetra. Sed id tortor in metus congue aliquet sed et est. Aenean tincidunt mollis risus, laoreet posuere libero elementum vel. Sed aliquam nunc ut sodales consequat. Maecenas eget mattis nulla. Fusce tincidunt nunc non arcu mattis, vel gravida metus convallis. Donec malesuada orci dapibus, condimentum est at, posuere nibh. Donec eu arcu rutrum, pharetra elit eget, euismod ante. Mauris posuere arcu pretium turpis vestibulum, id venenatis ligula ornare. Quisque sollicitudin risus at nulla vehicula pulvinar. Ut blandit vulputate mi. Sed malesuada eget felis blandit venenatis. Sed lobortis, magna vitae suscipit condimentum, nisl orci euismod odio, vitae eleifend leo ipsum sed urna. Pellentesque pulvinar feugiat mi, eget porttitor elit.
+</p>
