--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -1,3 +1,5 @@
-<h2>Homepage</h2>
+<h2>Home Page!</h2>
 
-<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque eget accumsan felis, a fringilla erat. Maecenas et arcu in ipsum porta condimentum sit amet et massa. Praesent et accumsan massa. Praesent eleifend elementum risus, sed consectetur eros luctus vel. Donec sagittis nulla eu mauris tincidunt ullamcorper. Donec sed consectetur neque. Donec et sem hendrerit, volutpat urna in, dapibus est. Curabitur aliquet nulla vitae felis tincidunt, sit amet euismod est commodo. Morbi sodales quam vitae rutrum mattis. Donec egestas interdum lectus, id condimentum neque.</p>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dictum orci condimentum metus facilisis, quis ornare orci scelerisque. Morbi rhoncus tincidunt tellus non facilisis. Fusce rutrum bibendum dui eu pretium. Curabitur vestibulum sollicitudin dui, iaculis pellentesque ipsum blandit suscipit. Nam quis velit venenatis, vestibulum ipsum in, imperdiet tellus. Vestibulum quis varius urna. Donec at neque quis felis pulvinar mattis nec ut sem. Donec facilisis elementum quam, at sagittis erat. Suspendisse potenti. Vivamus euismod mollis urna, ac vehicula ante sollicitudin nec.
+</p>
