--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,20 @@
 </head>
 <body>
 
-<p><%= image_tag 'rails.png' %></p>
+<p>
+  <%= image_tag 'rails.png' %>
+</p>
 
 <div id="menu">
-	<ul>
-		<li><%= link_to 'Home', root_path %></li>
-		<li><%= link_to 'About', about_path %></li>
-		<li><%= link_to 'Contact', contact_path %></li>
-		<li><%= link_to 'Blog', posts_path %></li>
-	</ul>
+  <ul>
+    <li><%= link_to 'Home', root_path %></li>
+    <li><%= link_to 'About Us', about_path %></li>
+    <li><%= link_to 'Contact Us', contact_path %></li>
+    <li><%= link_to 'Company Blog', posts_path %></li>
+  </ul>
 </div>
 
-<!-- This is where our views are injected -->
+<!-- This is where our views are injected. -->
 <%= yield %>
 
 </body>
