Added update and delete

--- a/app/views/info/about.html.erb
+++ b/app/views/info/about.html.erb
@@ -1,7 +1,5 @@
 <h2>About Us</h2>
-
-<p>Banana banana</p>
-
+<banana
 <p>
   Integer eu hendrerit dolor. Nulla at urna in quam eleifend scelerisque quis id magna. Donec id lacinia est. Sed et auctor erat. Proin volutpat pharetra erat porta convallis. Vivamus ac nulla eget nunc congue faucibus. Nunc lobortis molestie bibendum. Phasellus nec viverra massa. Quisque sit amet massa facilisis, imperdiet tellus et, imperdiet ante. Nullam et nibh sit amet neque rhoncus porta. In vel accumsan risus, et vulputate diam. Etiam libero urna, tristique vel placerat ultrices, mattis sed velit. Cras ultrices ultrices urna sit amet semper. Aenean et mattis dui. In sed orci ac leo tincidunt luctus.
 </p>
