--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,14 +5,17 @@
      The content goes in a p tag. -->
      
 <% @posts.each do |post| %>
-  <h3><%= link_to post.title, post %></h3>
-  <p><%= post.created_at %></p>
-  <p><%= post.content %></p>
-  <p><%= link_to 'Delete', post,
-         :method => :delete,
-         :data => { :confirm => 'Are you sure?' } %>
+  	<h3><%= link_to post.title, post %></h3>
+  	<p><%= post.created_at %></p>
+  	<p><%= post.content %></p> 
+  	<p>
+	  	<%= link_to 'Delete', post, 
+	  	  :method => :delete, 
+	  	  :data => { :confirm => 'Are you sure?' } %>
+	  	<%= link_to 'Edit', edit_post_path(post) %>
+ 	</p>
 <% end %>
 
 <p>
-  <%= link_to 'Create New Blog Post', new_post_path %>
+	<%= link_to 'Create New Blog Post', new_post_path %>
 </p>
