--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,16 +1,24 @@
 <h2>Create a New Post</h2>
-<!-- The f block param is known as a form builder.
-     We use it to build the elements of our form. -->
+
+<!-- The f block param is known as a form builder 
+	 we use it to build the elements of our form.-->
 <%= form_for @post do |f| %>
-  <div>
-    <%= f.label :title %> <br>
-    <%= f.text_field :title %>
-  </div>
-  <div>
-    <%= f.label :content %> <br>
-    <%= f.text_area :content %>
-  </div>
-  <div>
-    <%= f.submit 'Submit New Post' %>
-  </div>
+	<% if @post.errors.any? %>
+		<p style="color:red;">A blog post reuqires both
+	<% end %>
+
+	<div>
+		<%= f.label :title %><br>
+		<%= f.text_field :title %>
+	</div>
+
+	<div>
+		<%= f.label :content %><br>
+		<%= f.text_area :content %> 
+	</div>
+
+	<div>
+		<%= f.submit 'Submit New Post' %>
+	</div>
 <% end %>
+
